tests/snapshots/integration_test__log_data@ac5b16497a58d6736ef81fd82f029e70.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:18"
expression: result
info: "type=NETFILTER_CFG msg=audit(1481076984.827:17): table=filter family=2 entries=0"
---
{
  "record_type": "NETFILTER_CFG",
  "timestamp": 1481076984827,
  "id": 17,
  "fields": {
    "entries": "0",
    "family": "2",
    "table": "filter"
  }
}
