tests/snapshots/integration_test__log_data@ac713f23fa5851b318f4c426897089cd.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:13"
expression: result
info: "type=DAEMON_END msg=audit(1481078697.892:7799): auditd normal halt, sending auid=? pid=? subj=? res=success"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  normal halt, sending auid=? pid=? subj=? res=success"
    }
  }
}
