tests/snapshots/integration_test__log_data@ade4ad77ea22aecebf5877f42ecfd1ee.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:42"
expression: result
info: "type=USYS_CONFIG msg=audit(1481076993.000:402): pid=1232 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:unconfined_service_t:s0 msg='changing system time exe=\"/usr/sbin/hwclock\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "USYS_CONFIG",
  "timestamp": 1481076993000,
  "id": 402,
  "fields": {
    "auid": null,
    "msg": "changing system time exe=\"/usr/sbin/hwclock\" hostname=? addr=? terminal=? res=success",
    "pid": "1232",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "unconfined_service_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
