tests/snapshots/integration_test__log_data@b4bb26db7da50192811cb838bea67234.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:25"
expression: result
info: "type=SOCKADDR msg=audit(1490816924.990:517645): saddr=00000000000000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517645,
  "fields": {
    "saddr": "00000000000000000000000000000000"
  }
}
