tests/snapshots/integration_test__log_data@b9e961f2818f01dfa469c546ba3a9dce.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:11"
expression: result
info: "type=CWD msg=audit(1500661699.656:1208725):  cwd=2F746D702F6120622063"
---
{
  "record_type": "CWD",
  "timestamp": 1500661699656,
  "id": 1208725,
  "fields": {
    "cwd": "/tmp/a b c"
  }
}
