tests/snapshots/integration_test__log_data@bb2d4b456a6834e609ed189c26f88823.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-sockaddr-unknown-2.log:1"
expression: result
info: "type=SOCKADDR msg=audit(1709205350.768:2195413): saddr=00000000000000000000000000000000\u001dSADDR=unknown family(0)"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  family(0)"
    }
  }
}
